--- a/index.html
+++ b/index.html
@@ -633,21 +633,27 @@
 					</div>
 				</a>
 			</div>
+		</div>
+		<div class="grid-row--gutter-small">
 			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--medium grid-row--gutter-none">
+				<div class="terminal-block terminal-block--medium grid-row--gutter-none">
 					<div class="col-hg-6 padding-toright tabletl-padding-toright--none image-area">
 						<div class="image-holder">
 							<img src="phone-01.jpg" alt="">
 						</div>
-						<img class="sticker" src="splash.png" alt="sticker">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash">
+						</div>
 					</div>
 					<div class="col-hg-6 tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
 						<div class="description">
-							<ul class="colors desktoplg-hidden">
-								<li class="gray"></li>
-								<li class="red"></li>
-								<li class="green"></li>
-							</ul>
+							<div class="colors-holder desktoplg-hidden">
+								<ul class="colors-list">
+									<li class="gray"></li>
+									<li class="red"></li>
+									<li class="green"></li>
+								</ul>
+							</div>	
 							<h2 class="text-size--38 tabletl-text-size--16 trailer--small tabletl-trailer--none text-light tabletl-text-regular">Sony Xperia XZ Compact <span class="tablet-hidden">Third line</span></h2>
 							<ul class="list list--check tablet-hidden text-size--16">
 								<li>Fri tale og sms</li>
@@ -664,18 +670,22 @@
 				</div>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--small">
+				<a href="#" class="terminal-block terminal-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
 							<img src="hphones.png" alt="">
 						</div>
-						<img class="sticker" src="splash.png" alt="sticker">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash">
+						</div>
 					</div>
-					<ul class="colors">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -684,18 +694,22 @@
 				</a>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--small">
+				<a href="#" class="terminal-block terminal-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
 							<img src="phone-01.jpg" alt="">
 						</div>
-						<img class="sticker" src="splash.png" alt="sticker">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash">
+						</div>
 					</div>
-					<ul class="colors">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -704,18 +718,22 @@
 				</a>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--small">
+				<a href="#" class="terminal-block terminal-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
 							<img src="phone-01.jpg" alt="">
 						</div>
-						<img class="sticker" src="splash.png" alt="sticker">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash">
+						</div>
 					</div>
-					<ul class="colors">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -724,18 +742,22 @@
 				</a>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--small">
+				<a href="#" class="terminal-block terminal-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
 							<img src="phone-01.jpg" alt="">
 						</div>
-						<img class="sticker" src="splash.png" alt="sticker">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash">
+						</div>
 					</div>
-					<ul class="colors">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -743,8 +765,8 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-md-6 grid-row--gutter-none content-block--wide">
-				<a href="#" class="col-xs content-block content-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
+			<div class="col-md-6 grid-row--gutter-none terminal-block--wide">
+				<a href="#" class="col-xs terminal-block terminal-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
 					<div class="col-xs">
 						<strong class="text-size--13">FAMILYOFFER</strong>
 						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Buy broadband for the whole family</h2>
@@ -753,8 +775,8 @@
 					</div>
 				</a>
 			</div>
-			<div class="col-xs-12 grid-row--gutter-none content-block--wide">
-				<a href="#" class="col-xs content-block content-block__banner--large content-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
+			<div class="col-xs-12 grid-row--gutter-none terminal-block--wide">
+				<a href="#" class="col-xs terminal-block terminal-block__banner--large terminal-block__video-banner grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="video-background">
 						<video autoplay loop muted>
 							<source type="video/mp4" src="https://player.vimeo.com/external/184862802.hd.mp4?s=2f40bc3e5491efdd0fd672ca0867ab206a3bdd0a&profile_id=174">
@@ -770,7 +792,7 @@
 				</a>
 			</div>
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--large grid-row--gutter-none">
+				<a href="#" class="terminal-block terminal-block--large grid-row--gutter-none">
 					<div class="col-hg-6 bundle-content tabletl-text--center padding-trailer--large tabletl-padding-trailer--none">
 						<div class="description">
 							<strong class="text-size--13 tablet-hidden">BUNDLE</strong>
@@ -791,18 +813,22 @@
 				</a>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="content-block content-block--small">
+				<a href="#" class="terminal-block terminal-block--small">
 					<div class="image-area trailer--med">
 						<div class="image-holder">
 							<img src="phone-01.jpg" alt="">
 						</div>
-						<img class="sticker" src="splash.png" alt="sticker">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash">
+						</div>
 					</div>
-					<ul class="colors">
-						<li class="gray"></li>
-						<li class="red"></li>
-						<li class="green"></li>
-					</ul>
+					<div class="colors-holder">
+						<ul class="colors-list">
+							<li class="gray"></li>
+							<li class="red"></li>
+							<li class="green"></li>
+						</ul>
+					</div>	
 					<h3 class="text-size--16">Sony Xperia XZ Compact</h3>
 					<div class="price-box trailer">
 						<p class="text-size--19 color-blue">XXX<span class="text-size--11 color-gray toleft--xsmall">KR./MD.</span></p>
@@ -810,8 +836,8 @@
 					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</span></p>
 				</a>
 			</div>
-			<div class="col-hg-9 col-md-6 grid-row--gutter-none content-block--wide">
-				<a href="#" class="col-xs content-block content-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none terminal-block--wide">
+				<a href="#" class="col-xs terminal-block terminal-block__banner paddding-whole--xxlarge grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-03.jpg)">
 					<div class="col-xs">
 						<strong class="text-size--13">SUBSCRIPTIONS</strong>
 						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Chat with your friends for<br class="tablet-hidden" /> 99 kr. without worring <br class="tablet-hidden" />about data</h2>
@@ -821,7 +847,7 @@
 				</a>
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<div class="content-block content-block--small">
+				<div class="terminal-block terminal-block--small">
 					<h3 class="text-size--28 trailer">Find mobile</h3>
 					<div class="separator trailer"></div> 
 					<ul class="trailer--large">
