--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		<div class="grid-row--gutter-small">
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-mobile-medium grid-row--gutter-none">
-					<div class="col-hg-5 image-area mobile-order--first">
+					<div class="col-hg-5 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-2.png" alt="">
 							<div class="splash splash--image">
@@ -138,7 +138,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-7 bundle-content tabletl-text--center">
+					<div class="col-hg-7 col-xs-12 bundle-content tabletl-text--center">
 						<div class="description">
 							<div class="colors-holder desktoplg-hidden">
 								<ul class="colors-list">
@@ -165,7 +165,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="accessories-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -173,7 +173,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -193,7 +193,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -201,7 +201,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -221,7 +221,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="accessories-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -229,7 +229,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -249,7 +249,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -257,7 +257,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -303,7 +303,7 @@
 			</div>
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-medium grid-row--gutter-none">
-					<div class="col-hg-5 image-area mobile-order--first">
+					<div class="col-hg-5 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="tablet-test-img.png" alt="">
 							<div class="splash splash--image">
@@ -311,7 +311,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-7 bundle-content tabletl-text--center">
+					<div class="col-hg-7 col-xs-12 bundle-content tabletl-text--center">
 						<div class="description">
 							<div class="colors-holder desktoplg-hidden">
 								<ul class="colors-list">
@@ -338,7 +338,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="accessories-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -346,7 +346,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -366,7 +366,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -374,7 +374,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -394,7 +394,7 @@
 			</div>
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-large grid-row--gutter-none">
-					<div class="col-hg-5 bundle-content tabletl-text--center">
+					<div class="col-hg-5 col-xs-12 bundle-content tabletl-text--center">
 						<div class="description">
 							<div class="colors-holder desktoplg-hidden">
 								<ul class="colors-list">
@@ -417,7 +417,7 @@
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
-					<div class="col-hg-7 image-area mobile-order--first">
+					<div class="col-hg-7 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="tablet-test-img.png" alt="">
 							<div class="splash splash--image">
@@ -429,7 +429,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -437,7 +437,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -457,7 +457,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -465,7 +465,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -485,7 +485,7 @@
 			</div>
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories grid-row--gutter-none">
-					<div class="col-hg-5 bundle-content tabletl-text--center">
+					<div class="col-hg-5 col-xs-12 bundle-content tabletl-text--center">
 						<div class="description">
 							<div class="colors-holder desktoplg-hidden">
 								<ul class="colors-list">
@@ -508,7 +508,7 @@
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX kr.</p>
 						</div>
 					</div>
-					<div class="col-hg-7 image-area mobile-order--first">
+					<div class="col-hg-7 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="accessories-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -544,7 +544,7 @@
 			</div>
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-tablet-medium grid-row--gutter-none">
-					<div class="col-hg-5 image-area mobile-order--first">
+					<div class="col-hg-5 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="tablet-test-img.png" alt="">
 							<div class="splash splash--image">
@@ -552,7 +552,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-7 bundle-content tabletl-text--center">
+					<div class="col-hg-7 col-xs-12 bundle-content tabletl-text--center">
 						<div class="description">
 							<div class="colors-holder desktoplg-hidden">
 								<ul class="colors-list">
@@ -579,7 +579,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="accessories-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -587,7 +587,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -607,7 +607,7 @@
 			</div>
 			<div class="col-hg-3 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories-product-small grid-row--gutter-none">
-					<div class="col-hg-12 image-area mobile-order--first">
+					<div class="col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-1.png" alt="">
 							<div class="splash splash--image">
@@ -615,7 +615,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-hg-12 bundle-content text--center">
+					<div class="col-xs-12 bundle-content text--center">
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
@@ -634,6 +634,7 @@
 				</a>
 			</div>
 		</div>
+		<h3 class="leader trailer">Old Blocks</h3>
 		<div class="grid-row--gutter-small">
 			<div class="col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
 				<div class="terminal-block terminal-block--medium grid-row--gutter-none">
