small fix for splash

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<div class="col-hg-5 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="mobile-test-img-2.png" alt="">
-							<div class="splash splash--blue">
+							<div class="splash font-roboto splash--blue">
 								<span class="splash__heading">Text here</span>
 								<span class="splash__price">xxxXX KR.</span>
 							</div>
