changes for splash

--- a/index.html
+++ b/index.html
@@ -200,9 +200,16 @@
 						<div class="description">
 							<div class="colors-holder">
 								<ul class="colors-list">
-									<li class="gray"></li>
-									<li class="red"></li>
-									<li class="green"></li>
+									<li>
+										<label tabindex="0" for="radio-color-@color.LocalizedName" style="background-color: #636363">1</label>
+									</li>
+									<li>
+										<label tabindex="0" for="radio-color-@color.LocalizedName" style="background-color: #d84b4b">1</label>
+									</li>
+									<li>
+										<label tabindex="0" for="radio-color-@color.LocalizedName" style="background-color: #4bd84b">1</label>
+									</li>
+									
 								</ul>
 							</div>	
 							<h2 class="text-size--16 text-regular">3-col accessories block</h2>
