Fixes for banner

--- a/index.html
+++ b/index.html
@@ -301,11 +301,11 @@
 						</video>
 					</div>
 					<div class="col-hg-8 col-lg-10 banner-content">
-						<div class="icon-holder trailer--large">
-							<span class="icon icon-home-broadband circle-outline  circle-outline text-size--50 inline-block border-width-2"></span>
+						<div class="icon-holder trailer--small">
+							<span class="icon icon-home-broadband circle-outline circle-outline text-size--50 inline-block border-width-2"></span>
 						</div>
-						<p class="text-size--13 text-caps text-bold trailer--small">TEASER HEADER</p>
-						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer--xlarge tabletl-trailer mobile-trailer--small">Main title. Episerver text you can write here</h2>
+						<p class="text-size--13 text-caps text-bold leader">TEASER HEADER</p>
+						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer mobile-trailer--small">Main title. Episerver text you can write here</h2>
 						<span class="button button--action trailer--large">Button</span>
 					</div>
 					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</p>
@@ -314,11 +314,11 @@
 			<div class="col-xs-12 grid-row--gutter-none terminal-block--wide">
 				<a href="#" class="col-xs terminal-block terminal-block__banner terminal-block__banner--large grid-row--gutter-none grid-row-lg--middle grid-row-xs--bottom grid-row-xs--center padding-whole--xxlarge mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-02.jpg)">
 					<div class="col-hg-8 col-lg-10 banner-content">
-						<div class="icon-holder icon-holder--image trailer--large">
+						<div class="icon-holder icon-holder--image trailer--small">
 							<img src="banner-icon.png" alt="image description" />
 						</div>
-						<p class="text-size--13 text-caps text-bold trailer--small">TEASER HEADER</p>
-						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer--xlarge tabletl-trailer mobile-trailer--small">Main title. Episerver text you can write here</h2>
+						<p class="text-size--13 text-caps text-bold leader">TEASER HEADER</p>
+						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer mobile-trailer--small">Main title. Episerver text you can write here</h2>
 						<span class="button button--action trailer--large">Button</span>
 					</div>
 					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</p>
