9-col 6-col 3-col banners

--- a/index.html
+++ b/index.html
@@ -285,12 +285,12 @@
 			</div>
 			<div class="col-md-6 grid-row--gutter-none terminal-block--wide">
 				<a href="#" class="col-xs terminal-block terminal-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
-					<div class="col-xs">
-						<strong class="text-size--13">FAMILYOFFER</strong>
-						<h2 class="text-size--44 tabletp-text-size--28 text-light trailer text-light">Buy broadband for the whole family</h2>
-						<span class="button button--action trailer--large">Broadband subscriptions</span>
-						<p class="text-size--11 color-white">Minimum price w. FRI+ XX GB: X.XXX kr.</p>
+					<div class="col-xs col-hg-7">
+						<strong class="text-size--13">6-col banner block</strong>
+						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer text-light">Main title. Episerver text you can write here</h2>
+						<span class="button button--action trailer--large">Button</span>
 					</div>
+					<p class="text-size--11 color-white banner-legal">Legal text</p>
 				</a>
 			</div>
 			<div class="col-xs-12 grid-row--gutter-none terminal-block--wide">
@@ -322,6 +322,36 @@
 						<span class="button button--action trailer--large">Button</span>
 					</div>
 					<p class="text-size--11 color-white banner-legal">Minimum price w. FRI+ XX GB: X.XXX kr.</p>
+				</a>
+			</div>
+			<div class="col-hg-9 col-md-6 grid-row--gutter-none terminal-block--wide">
+				<a href="#" class="col-xs terminal-block terminal-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
+					<div class="col-xs col-hg-7">
+						<strong class="text-size--13">9-col banner block</strong>
+						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer text-light">Main title. Episerver text you can write here</h2>
+						<span class="button button--action trailer--large">Button</span>
+					</div>
+					<p class="text-size--11 color-white banner-legal">Legal text</p>
+				</a>
+			</div>
+			<div class="col-md-6 grid-row--gutter-none terminal-block--wide">
+				<a href="#" class="col-xs terminal-block terminal-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
+					<div class="col-xs col-hg-7">
+						<strong class="text-size--13">6-col banner block</strong>
+						<h2 class="text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer text-light">Main title. Episerver text you can write here</h2>
+						<span class="button button--action trailer--large">Button</span>
+					</div>
+					<p class="text-size--11 color-white banner-legal">Legal text</p>
+				</a>
+			</div>
+			<div class="col-hg-3 col-md-6 grid-row--gutter-none terminal-block--wide text--center tabletl-text--left">
+				<a href="#" class="col-xs terminal-block terminal-block__banner grid-row--gutter-none grid-row-xs--bottom padding-whole--xxlarge padding-trailer--large mobile-padding-toleft mobile-padding-toright" style="background-image: url(banner-01.jpg);">
+					<div class="col-xs">
+						<strong class="text-size--13">3-col banner block</strong>
+						<h2 class="text-size--28 tablel-text-size--44 tabletp-text-size--38 mobile-text-size--28 text-light trailer text-light">Main title. Episerver text you can write here</h2>
+						<span class="button button--action trailer--large">Button</span>
+					</div>
+					<p class="text-size--11 color-white banner-legal">Legal text</p>
 				</a>
 			</div>
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
