--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
 <div id="main" class="container--main">
-	<div class="terminal-block terminal-block--cover container--wide trailer--large">
+	<div class="terminal-block terminal-block--cover terminal-block--cover-carousel container--wide trailer--large">
 		
 		<div class="container carousel carousel--loop" data-component="carousel" data-loop="true" data-auto-play="5000" data-duration="1000" data-visible-slides="1">
 			<button class="carousel__prev" href="#" data-alias="btnPrev" data-component="button"><i class="icon-arrow-prev"></i></button>
